fix logo file path

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=true;">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
     <title>Linked List</title>
   </head>
@@ -12,7 +12,7 @@
 
     <section class="form">
       <h1 class="title">
-        <p>Linked</p><img src="linked-list-logo.svg" class="logo" /><p>List</p>
+        <p>Linked</p><img src="./images/linked-list-logo.svg" class="logo" /><p>List</p>
       </h1>
       <input type="text" name="bookmark-title" placeholder="Website Title" id="title-form">
       <input type="url" name="bookmark-url" placeholder="Website URL" id="url-form">
