--- a/index.html
+++ b/index.html
@@ -32,5 +32,8 @@
 
   </body>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="./scripts/jquery.min.js"><\/script>')</script>
+  <script>window.jQuery || document.write('<script src="./scripts/jquery.min.js"><\/script>')</script>
+  <script type="text/javascript" src="./scripts/linked-list.js"></script>
+
+
 </html>
