Add CSS color/text/non-positional styles

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
       <h1 class="title">
         <p>Linked</p><img src="./images/linked-list-logo.svg" class="logo" /><p>List</p>
       </h1>
-      <input type="text" name="bookmark-title" placeholder="Website Title" id="title-form">
-      <input type="url" name="bookmark-url" placeholder="Website URL" id="url-form">
-      <button type="button" name="create-button" id="create-button"><p>Enter</p></button>
+      <input type="text" name="bookmark-title" placeholder="Website Title" id="title-form" class="form-input">
+      <input type="url" name="bookmark-url" placeholder="Website URL" id="url-form" class="form-input">
+      <button type="button" name="create-button" id="create-button" class="form-input"><p>Enter</p></button>
     </section>
 
     <section class="list">
       <box class="box">
         <h1>The Website Title</h1>
-        <a href="http://bussayler.com">www.thewebsiteurl.com</a>
+        <a href="http://bussayler.com"><p>www.thewebsiteurl.com</p></a>
         <div class="bookmark-buttons">
           <button type="button" name="Read" class=".read-button"><p>Read</p></button>
           <button type="button" name="Delete" class=".delete-button"><p>Delete</p></button>
