--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     </section>
 
     <section class="list">
-      <box class="box">
+      <article class="box" id="bookmark-0">
         <h1>The Website Title</h1>
         <a href="http://bussayler.com"><p>www.thewebsiteurl.com</p></a>
         <div class="bookmark-buttons">
-          <button type="button" name="Read" class=".read-button"><p>Read</p></button>
-          <button type="button" name="Delete" class=".delete-button"><p>Delete</p></button>
+          <button type="button" name="Read" class="read-button"><p>Read</p></button>
+          <button type="button" name="Delete" class="delete-button"><p>Delete</p></button>
         </div>
-      </box>
+      </article>
     </section>
 
   </body>
