--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <input type="text" name="bookmark-title" placeholder="Website Title" id="title-form" class="form-input">
       <input type="url" name="bookmark-url" placeholder="Website URL" id="url-form" class="form-input">
       <button type="button" name="create-button" id="create-button" class="form-input"><p>Enter</p></button>
+      <button type="button" name="clear-button" id="clear-button" class="form-input"><p>Clear All Read</p></button>
     </section>
 
     <section class="list">
