add total, read, unread counters

--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
       <button type="button" name="clear-button" id="clear-button" class="form-input"><p>Clear All Read</p></button>
     </section>
 
+
+    <section class="counters">
+      <div id="total-counter" class="counter">
+        <p>Total: <span id="num-total"> </span></p>
+      </div>
+      <div id="read-counter" class="counter">
+        <p>Read: <span id="num-read"> </span></p>
+      </div>
+      <div id="unread-counter" class="counter">
+        <p>Unread: <span id="num-unread"> </span></p>
+      </div>
+    </section>
     <section class="list">
 
       <article class="box" id="bookmark-0">
