--- a/index.html
+++ b/index.html
@@ -23,16 +23,20 @@
 
       <article class="box" id="bookmark-0">
         <h1>The Website Title</h1>
+        <hr>
         <a href="http://bussayler.com"><p>www.thewebsiteurl.com</p></a>
+        <hr>
         <div class="bookmark-buttons">
-          <button type="button" name="Read" class="read-button"><p>Read</p></button>
-          <button type="button" name="Delete" class="delete-button"><p>Delete</p></button>
+          <button type="button" name="Read" class="read-button">Read</button>
+          <button type="button" name="Delete" class="delete-button">Delete</button>
         </div>
       </article>
 
       <article class="box" id="bookmark-1">
         <h1>The Website Title</h1>
+        <hr>
         <a href="http://bussayler.com"><p>www.thewebsiteurl.com</p></a>
+        <hr>
         <div class="bookmark-buttons">
           <button type="button" name="Read" class="read-button"><p>Read</p></button>
           <button type="button" name="Delete" class="delete-button"><p>Delete</p></button>
@@ -41,7 +45,9 @@
 
       <article class="box" id="bookmark-2">
         <h1>The Website Title</h1>
+        <hr>
         <a href="http://bussayler.com"><p>www.thewebsiteurl.com</p></a>
+        <hr>
         <div class="bookmark-buttons">
           <button type="button" name="Read" class="read-button"><p>Read</p></button>
           <button type="button" name="Delete" class="delete-button"><p>Delete</p></button>
