--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       <input type="url" name="bookmark-url" placeholder="Website URL" id="url-form" class="form-input">
       <button type="button" name="create-button" id="create-button" class="form-input"><p>Enter</p></button>
       <button type="button" name="clear-button" id="clear-button" class="form-input"><p>Clear All Read</p></button>
+      <section class="error-msg">
+      </section>
     </section>
 
 
