Align desktop form

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <section class="form">
       <h1 class="title">
-        <p>Linked</p><img src="./images/linked-list-logo.svg" class="logo" /><p>List</p>
+        Linked <span class="logo"><img src="./images/linked-list-logo.svg" /> </span>List
       </h1>
       <input type="text" name="bookmark-title" placeholder="Website Title" id="title-form" class="form-input">
       <input type="url" name="bookmark-url" placeholder="Website URL" id="url-form" class="form-input">
@@ -57,6 +57,17 @@
       </article>
 
       <article class="box" id="bookmark-2">
+        <h1>The Website Title</h1>
+        <hr>
+        <a href="http://bussayler.com"><p><span class="hov-line">www.thewebsiteurl.com</span></p></a>
+        <hr>
+        <div class="bookmark-buttons">
+          <button type="button" name="Read" class="read-button"><span class="hov-line">Read</span></button>
+          <button type="button" name="Delete" class="delete-button"><span class="hov-line">Delete</span></button>
+        </div>
+      </article>
+
+      <article class="box" id="bookmark-3">
         <h1>The Website Title</h1>
         <hr>
         <a href="http://bussayler.com"><p><span class="hov-line">www.thewebsiteurl.com</span></p></a>
