--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       </h1>
       <input type="text" name="bookmark-title" placeholder="Website Title" id="title-form" class="form-input">
       <input type="url" name="bookmark-url" placeholder="Website URL" id="url-form" class="form-input">
+      <p class="error-msg">URL is not valid!</p>
       <button type="button" name="create-button" id="create-button" class="form-input"><p>Enter</p></button>
       <button type="button" name="clear-button" id="clear-button" class="form-input"><p>Clear All Read</p></button>
 
@@ -29,8 +30,6 @@
         <div id="unread-counter" class="counter">
           <p>Unread: <span id="num-unread"> </span></p>
         </div>
-        <section class="error-msg">
-        </section>
       </section>
     </section>
 
