--- a/index.html
+++ b/index.html
@@ -35,58 +35,11 @@
       </section>
     </section>
 
-
-
-    <section class="list">
-      <article class="box" id="bookmark-0">
-        <h1>The Website Title</h1>
-        <hr>
-        <a href="http://bussayler.com"><p><span class="hov-line">www.thewebsiteurl.com</span></p></a>
-        <hr>
-        <div class="bookmark-buttons">
-          <button type="button" name="Read" class="read-button"><span class="hov-line">Read</span></button>
-          <button type="button" name="Delete" class="delete-button"><span class="hov-line">Delete</span></button>
-        </div>
-      </article>
-
-      <article class="box" id="bookmark-1">
-        <h1>The Website Title</h1>
-        <hr>
-        <a href="http://bussayler.com"><p><span class="hov-line">www.thewebsiteurl.com</span></p></a>
-        <hr>
-        <div class="bookmark-buttons">
-          <button type="button" name="Read" class="read-button"><span class="hov-line">Read</span></button>
-          <button type="button" name="Delete" class="delete-button"><span class="hov-line">Delete</span></button>
-        </div>
-      </article>
-
-      <article class="box" id="bookmark-2">
-        <h1>The Website Title</h1>
-        <hr>
-        <a href="http://bussayler.com"><p><span class="hov-line">www.thewebsiteurl.com</span></p></a>
-        <hr>
-        <div class="bookmark-buttons">
-          <button type="button" name="Read" class="read-button"><span class="hov-line">Read</span></button>
-          <button type="button" name="Delete" class="delete-button"><span class="hov-line">Delete</span></button>
-        </div>
-      </article>
-
-      <article class="box" id="bookmark-3">
-        <h1>The Website Title</h1>
-        <hr>
-        <a href="http://bussayler.com"><p><span class="hov-line">www.thewebsiteurl.com</span></p></a>
-        <hr>
-        <div class="bookmark-buttons">
-          <button type="button" name="Read" class="read-button"><span class="hov-line">Read</span></button>
-          <button type="button" name="Delete" class="delete-button"><span class="hov-line">Delete</span></button>
-        </div>
-      </article>
-
-    </section>
+    <section class="list"></section>
 
   </body>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="./scripts/jquery.min.js"><\/script>')</script>
+  <script> window.jQuery || document.write('<script src="./scripts/jquery.min.js"><\/script>')</script>
   <script type="text/javascript" src="./scripts/linked-list.js"></script>
 
 
